feat: integrate OpenAI for intelligent resume data extraction
- Added GPT-4 and Vision API integration for comprehensive resume parsing
- Implemented support for both text-based and image-based PDFs with automatic fallback
- Added structured data extraction for profile, experience, education, skills with ENUM validation
- Updated upload component with detailed processing status indicators
- Enhanced error handling for OpenAI API errors, rate limits, and timeouts
- Updated documentation with new AI

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ DATABASE_URL="postgresql://user:password@localhost:5432/pdf_scraper?schema=publi
 NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
 NEXTAUTH_URL="http://localhost:3000"
 
-# OpenAI (for future PDF processing)
+# OpenAI (required for resume data extraction)
 OPENAI_API_KEY="your-openai-api-key-here"
