--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bcryptjs": "^3.0.2",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.7.0",
     "pdf-parse": "^2.4.5",
+    "pdf-to-img": "^5.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
