--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ NEXTAUTH_URL="http://localhost:3000"
 
 # OpenAI (required for resume data extraction)
 OPENAI_API_KEY="your-openai-api-key-here"
+
+# Stripe (for subscription and credit system)
+STRIPE_SECRET_KEY="sk_test_your-stripe-secret-key-here"
+STRIPE_PUBLIC_KEY="pk_test_your-stripe-public-key-here"
+STRIPE_WEBHOOK_SECRET="whsec_your-webhook-secret-here"
+STRIPE_PRICE_BASIC="price_basic_plan_id"
+STRIPE_PRICE_PRO="price_pro_plan_id"
