--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "@stripe/stripe-js": "^8.2.0",
     "bcryptjs": "^3.0.2",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
@@ -26,6 +27,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
+    "stripe": "^19.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
