feat: enhance Stripe webhook handling and file upload processing
- Added support for additional Stripe webhook events including invoice.payment_succeeded and invoice_payment.paid
- Added error handling and logging for subscription invoice processing
- Implemented customer.subscription.created webhook handler for new subscriptions
- Fixed JSON serialization issue in file upload by explicitly parsing/stringifying resumeData
- Updated upload route configuration to use nodejs runtime with 60s timeout

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@prisma/client": "^6.18.0",
     "@stripe/stripe-js": "^8.2.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.7.0",
     "pdf-parse": "^2.4.5",
     "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
