feat: streamline PDF resume parsing with improved extraction
- Refactored PDF processing to use unified extractor that automatically detects text/image content
- Simplified upload route by consolidating PDF validation and extraction logic
- Updated environment variables format and documentation for clarity
- Added error handling and logging for better debugging
- Removed redundant PDF utility functions in favor of centralized extractor
- Improved OpenAI service configuration and type definitions

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/pdf_scraper?schema=public"
+DATABASE_URL="postgresql://..."
 
 # NextAuth
-NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
 NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-here"
 
-# OpenAI (required for resume data extraction)
-OPENAI_API_KEY="your-openai-api-key-here"
+# OpenAI
+OPENAI_KEY="sk-proj-..."
 
-# Stripe (for subscription and credit system)
-STRIPE_SECRET_KEY="sk_test_your-stripe-secret-key-here"
-STRIPE_PUBLIC_KEY="pk_test_your-stripe-public-key-here"
-STRIPE_WEBHOOK_SECRET="whsec_your-webhook-secret-here"
-STRIPE_PRICE_BASIC="price_basic_plan_id"
-STRIPE_PRICE_PRO="price_pro_plan_id"
+# Stripe
+STRIPE_SECRET_KEY="sk_test_..." # Use sk_live_... for production
+STRIPE_WEBHOOK_SECRET="whsec_..." # Get from Stripe webhook settings
+STRIPE_PRICE_BASIC="price_..." # Basic plan price ID
+STRIPE_PRICE_PRO="price_..." # Pro plan price ID
