--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@prisma/client": "^6.18.0",
     "@stripe/stripe-js": "^8.2.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.7.0",
-    "pdf-parse": "^2.4.5",
     "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "zod": "^4.1.12"
@@ -33,8 +36,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/pdf-parse": "^1.1.5",
+    "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
