--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/pdf_scraper?schema=public"
+DATABASE_URL="postgresql://..."
 
 # NextAuth
-NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl-rand-base64-32"
 NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-here"
 
-# OpenAI (for future PDF processing)
-OPENAI_API_KEY="your-openai-api-key-here"
+# OpenAI
+OPENAI_KEY="sk-proj-..."
+
+# Stripe
+STRIPE_SECRET_KEY="sk_test_..." # Use sk_live_... for production
+STRIPE_WEBHOOK_SECRET="whsec_..." # Get from Stripe webhook settings
+STRIPE_PRICE_BASIC="price_..." # Basic plan price ID
+STRIPE_PRICE_PRO="price_..." # Pro plan price ID
