--- a/package.json
+++ b/package.json
@@ -16,19 +16,27 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "@stripe/stripe-js": "^8.2.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.7.0",
+    "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
+    "stripe": "^19.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
