feat: enhance PDF processing for serverless environment
- Replaced generic PDF extractor with serverless-compatible text extraction
- Added PDF buffer validation step to catch invalid files early
- Simplified processing flow to always use text-based extraction for consistency
- Added metadata capture from PDF extraction results
- Updated error messages to be more specific about text searchability requirements
- Improved type safety with stricter TypeScript definitions
- Standardized response format for various error conditions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:generate": "prisma generate",
+    "db:generate": "dotenv -e .env.local -- prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:setup": "./scripts/setup-db.sh"
@@ -22,7 +22,6 @@
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.7.0",
-    "pdfjs-dist": "^5.4.296",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
@@ -37,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
