--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
     "@stripe/stripe-js": "^8.2.0",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.7.0",
+    "pdf2json": "^4.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
