--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "nextjs-toploader": "^3.9.17",
     "openai": "^6.7.0",
     "pdf2json": "^4.0.0",
     "react": "19.2.0",
