feat: add GitHub and Google OAuth providers
- Added GitHub and Google OAuth integration to the authentication system
- Updated login and register pages with OAuth buttons and improved error handling
- Enhanced password reset flow with better validation and development mode support
- Added detailed OAuth setup instructions in NEXTAUTH_SETUP.md
- Updated environment variables to include OAuth client credentials
- Improved error messages and toast notifications across auth flows
- Updated documentation

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,15 @@ DATABASE_URL="postgresql://..."
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-here"
+NEXTAUTH_SECRET="your-secret-here" # Generate with: openssl rand -base64 32
+
+# GitHub OAuth
+GITHUB_ID="your-github-oauth-app-client-id"
+GITHUB_SECRET="your-github-oauth-app-client-secret"
+
+# Google OAuth
+GOOGLE_ID="your-google-oauth-client-id"
+GOOGLE_SECRET="your-google-oauth-client-secret"
 
 # OpenAI
 OPENAI_KEY="sk-proj-..."
