feat: implement email notifications and password reset system
- Added Resend email service integration for sending welcome and password reset emails
- Created new PasswordResetToken model for more secure token management
- Enhanced registration flow with welcome email and celebration confetti
- Improved password reset workflow with dedicated token table and email notifications
- Updated environment variables to include Resend API key and app URL
- Added email templates using react-email components

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ STRIPE_SECRET_KEY="sk_test_..." # Use sk_live_... for production
 STRIPE_WEBHOOK_SECRET="whsec_..." # Get from Stripe webhook settings
 STRIPE_PRICE_BASIC="price_..." # Basic plan price ID
 STRIPE_PRICE_PRO="price_..." # Pro plan price ID
+
+# Resend (Email Service)
+RESEND_API_KEY="re_..." # Get from resend.com dashboard
+NEXT_PUBLIC_APP_URL="http://localhost:3000" # Update for production
