--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^0.5.7",
     "@stripe/stripe-js": "^8.2.0",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -37,7 +39,9 @@
     "pdf2json": "^4.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-email": "^4.3.2",
     "react-hook-form": "^7.65.0",
+    "resend": "^6.4.0",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -47,6 +51,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
