Feat/design phase (#15)
* feat: redesign login and register pages with modern UI

- Added sleek dark theme with gradient accents and glass-morphism effects
- Implemented animated logo and loading states for better user feedback
- Added password visibility toggle functionality with eye icons
- Enhanced form fields with leading icons and improved placeholder styling
- Added feature highlights section showcasing key product benefits
- Included trust indicators like user stats and security badges
- Improved responsive layout

* refactor: extract form components and improve auth pages

- Created reusable form components (EmailInput, PasswordInput, NameInput) to reduce duplication
- Extracted FeatureHighlights into separate component for better code organization
- Updated CSS class names to use linear-to-* instead of gradient-to-* for consistency
- Added LenisProvider for smooth scrolling functionality
- Enhanced metadata with more detailed SEO information and social media tags
- Added NextTopLoader for better loading state

* feat: add GitHub and Google OAuth providers

- Added GitHub and Google OAuth integration to the authentication system
- Updated login and register pages with OAuth buttons and improved error handling
- Enhanced password reset flow with better validation and development mode support
- Added detailed OAuth setup instructions in NEXTAUTH_SETUP.md
- Updated environment variables to include OAuth client credentials
- Improved error messages and toast notifications across auth flows
- Updated documentation

* feat: implement email notifications and password reset system

- Added Resend email service integration for sending welcome and password reset emails
- Created new PasswordResetToken model for more secure token management
- Enhanced registration flow with welcome email and celebration confetti
- Improved password reset workflow with dedicated token table and email notifications
- Updated environment variables to include Resend API key and app URL
- A

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,15 @@ DATABASE_URL="postgresql://..."
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-here"
+NEXTAUTH_SECRET="your-secret-here" # Generate with: openssl rand -base64 32
+
+# GitHub OAuth
+GITHUB_ID="your-github-oauth-app-client-id"
+GITHUB_SECRET="your-github-oauth-app-client-secret"
+
+# Google OAuth
+GOOGLE_ID="your-google-oauth-client-id"
+GOOGLE_SECRET="your-google-oauth-client-secret"
 
 # OpenAI
 OPENAI_KEY="sk-proj-..."
@@ -13,3 +21,7 @@ STRIPE_SECRET_KEY="sk_test_..." # Use sk_live_... for production
 STRIPE_WEBHOOK_SECRET="whsec_..." # Get from Stripe webhook settings
 STRIPE_PRICE_BASIC="price_..." # Basic plan price ID
 STRIPE_PRICE_PRO="price_..." # Pro plan price ID
+
+# Resend (Email Service)
+RESEND_API_KEY="re_..." # Get from resend.com dashboard
+NEXT_PUBLIC_APP_URL="http://localhost:3000" # Update for production
