--- a/package.json
+++ b/package.json
@@ -16,25 +16,42 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^0.5.7",
     "@stripe/stripe-js": "^8.2.0",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lenis": "^1.3.13",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "nextjs-toploader": "^3.9.17",
     "openai": "^6.7.0",
     "pdf2json": "^4.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-email": "^4.3.2",
     "react-hook-form": "^7.65.0",
+    "resend": "^6.4.0",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -44,6 +61,8 @@
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
