--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "driver.js": "^1.3.6",
     "lenis": "^1.3.13",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
