--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-email": "^4.3.2",
     "react-hook-form": "^7.65.0",
     "resend": "^6.4.0",
+    "sass": "^1.93.3",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
