--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "driver.js": "^1.3.6",
     "lenis": "^1.3.13",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
@@ -42,6 +43,7 @@
     "react-email": "^4.3.2",
     "react-hook-form": "^7.65.0",
     "resend": "^6.4.0",
+    "sass": "^1.93.3",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
