--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^8.2.0",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,13 +38,16 @@
     "next-auth": "^5.0.0-beta.30",
     "nextjs-toploader": "^3.9.17",
     "openai": "^6.7.0",
+    "pdf-lib": "^1.17.1",
     "pdf2json": "^4.0.0",
+    "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-email": "^4.3.2",
     "react-hook-form": "^7.65.0",
     "resend": "^6.4.0",
     "sass": "^1.93.3",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -55,12 +59,15 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.24",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "form-data": "^4.0.4",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
