feat: optimize upload by moving PDF processing to client-side
- Removed server-side PDF processing fallback to reduce serverless function payload and execution time
- Changed upload endpoint to accept only file metadata (name, size) instead of full file buffer
- Increased rate limit from 10 to 40 uploads per hour and configured 60s timeout for upload function

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,22 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "functions": {
+    "app/api/upload/route.ts": {
+      "maxDuration": 60,
+      "memory": 1024
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/upload",
+      "headers": [
+        {
+          "key": "x-vercel-max-duration",
+          "value": "60"
+        }
+      ]
+    }
+  ]
 }
